--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ redirect_from:
 - /development/openflow-1-x-plan/index.html
 ---
 <!--TODO mailing list links-->
+test change 
 
 <div class="section group">
   <div class="col-1-1">
